--- a/css/scss/layout/_main.scss
+++ b/css/scss/layout/_main.scss
@@ -16,4 +16,5 @@
 .main-page-index {
   overflow: hidden;
   height: 100vh;
+  max-height: 100%;
 }
